--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,8 @@ section {
     margin-right: 24px;
     cursor: pointer;
     transition-duration: 300ms;
+    text-decoration: none;
+    color: var(--dark);
 }
 
 .cardRecent:hover {
