--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,11 @@ section {
     padding-bottom: 48px;
 }
 
-strong, h1, h2, h3, h4 {
+strong,
+h1,
+h2,
+h3,
+h4 {
     color: var(--secondary);
 }
 
@@ -89,4 +93,11 @@ td {
 
 table {
     max-width: 90vw;
+}
+
+#rodape a img {
+    width: 32px;
+    line-height: 36px;
+    margin: 2px;
+    vertical-align: middle;
 }
