--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ section {
 /* Cards da página inicial */
 .cardRecent {
     width: 20vw;
-    height: 25vw;
+    height: 60vh;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.28);
     border-radius: 16px;
     margin-right: 24px;
