--- a/css/contato.css
+++ b/css/contato.css
@@ -10,3 +10,28 @@ input {
 h2 {
     margin-left: 5vw;
 }
+
+fieldset {
+    border-radius: 16px;
+    margin-bottom: 12px;
+}
+
+fieldset>legend {
+    color: var(--secondary);  
+    font-weight: bold; 
+}
+
+.button {
+    background-color: var(--primary);
+    border-radius: 16px;
+    padding: 8px;
+    color: white;
+    border: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.28);
+    font-size: 12pt;
+    cursor: pointer;
+}
+
+.button.important {
+    background-color: var(--secondary);
+}
